@@ -15,6 +15,7 @@ import com.github.tomakehurst.wiremock.junit5.WireMockExtension;
 import com.github.tomakehurst.wiremock.matching.RequestPatternBuilder;
 import java.io.*;
 import java.net.*;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.HashMap;
@@ -56,7 +57,8 @@ public class JdkClientTest {
         BASE_URL = wiremock.getRuntimeInfo().getHttpBaseUrl();
         API_URL = String.format("%s%s", BASE_URL, BASE_PATH);
 
-        URL proxyUrl = new URL(wiremockProxy.getRuntimeInfo().getHttpBaseUrl());
+        URL proxyUrl =
+                URI.create(wiremockProxy.getRuntimeInfo().getHttpBaseUrl()).toURL();
         httpClientWithProxy = new JdkClient(
                 new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxyUrl.getHost(), wiremockProxy.getPort())));
 
@@ -212,7 +214,8 @@ public class JdkClientTest {
         HttpResponse<String> response = httpClientWithProxy.get(API_URL, Collections.emptyMap());
 
         wiremockProxy.verify(getRequestedFor(urlEqualTo(BASE_PATH)));
-        validateGetRequest(response);
+        assertThat(response.getStatusCode(), is(equalTo(HttpURLConnection.HTTP_OK)));
+        assertThat(response.getBody(), is(equalTo(SAMPLE_RESPONSE_BODY)));
         assertThat(response.isError(), is(false));
     }
 
